--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,16 +9,17 @@
 
 <!-- Main Layout -->
 <div class="app-wrapper" appShortcutHandler>
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
+
   @if (!completedOnboarding) {
-    <app-onboarding class="onboarding" (completed)="finishOnboarding()"> </app-onboarding>
+    <app-onboarding class="onboarding" (completed)="finishOnboarding()"></app-onboarding>
   }
   <app-titlebar class="title-bar"></app-titlebar>
+  <app-home class="home-content"></app-home>
   <app-tabs-buttons
     data-tauri-drag-region
     class="tabs"
     [currentTab]="currentTab"
     (tabSelected)="setTab($event)"
   ></app-tabs-buttons>
-  <app-home></app-home>
 </div>
