--- a/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.scss
+++ b/src/app/features/modals/remote-management/remote-config-modal/remote-config-modal.component.scss
@@ -1,11 +1,9 @@
-// Use shared modal styles with modern Sass module system
-@use "../../../../styles/_shared-modal";
 .modal-container {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  height: 100%;
   width: 100%;
+  box-sizing: border-box;
   background: var(--app-background);
   color: var(--app-text-color);
   border-radius: var(--modal-radius);
@@ -13,26 +11,10 @@
   // Modal Content
   .modal-content {
     position: relative;
-    height: 100%;
-    overflow: hidden;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
     background: var(--app-background);
-
-    .animation-wrapper {
-      position: relative;
-      height: 100%;
-      width: 100%;
-      overflow-y: auto;
-    }
-
-    .step-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      display: flex;
-      flex-direction: column;
-      padding: var(--step-padding);
-    }
 
     h2 {
       display: flex;
