--- a/src/app/layout/tabs-buttons/tabs-buttons.component.scss
+++ b/src/app/layout/tabs-buttons/tabs-buttons.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   gap: var(--space-xs);
-
+  padding: var(--space-xs);
   .mat-mdc-icon-button {
     color: var(--app-text-color);
 
@@ -23,5 +23,11 @@
       outline: none !important;
       background-color: var(--selected-tab-color) !important;
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .tabs-buttons {
+    width: 100%;
   }
 }
